[tool.poetry]
name = "djangoprod"
version = "0.1.0"
description = ""
authors = ["LeoGitHab <leo196722@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.0"
django-rest-framework = "^0.1.0"
django-debug-toolbar = "^4.2.0"
django-filter = "^23.5"
gunicorn = "^21.2.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
